@@ -21,62 +21,24 @@
 
   <dependencies>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>6.1.10</version>
-    </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>6.1.10</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>6.1.10</version>
-    </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>5.1.3</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
+
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot</artifactId>
-      <version>3.3.0</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-core</artifactId>
-      <version>6.3.1</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
-    <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-commons</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
       <version>3.3.1</version>
     </dependency>
 
 
-    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-      <version>3.3.0</version>
-    </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -91,24 +53,13 @@
       <version>3.3.1</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-mail</artifactId>
-      <version>3.3.1</version>
-    </dependency>
 
-    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.28</version>
     </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>5.3.20</version>
-    </dependency>
+
 
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -116,6 +67,8 @@
       <version>1.18.32</version>
       <scope>provided</scope>
     </dependency>
+
+
 
     <dependency>
       <groupId>junit</groupId>
@@ -142,21 +95,13 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-<!--        <plugin>-->
-<!--          <groupId>org.apache.maven.plugins</groupId>-->
-<!--          <artifactId>maven-surefire-plugin</artifactId>-->
-<!--          <version>${maven-surefire-plugin.version}</version>-->
-<!--          <configuration>-->
-<!--            <argLine>-XX:+EnableDynamicAgentLoading</argLine>-->
-<!--          </configuration>-->
-<!--        </plugin>-->
-<!--        спросить  про ошибку WARNING: A Java agent has been loaded dynamically-->
+
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <argLine>-XX:+EnableDynamicAgentLoading</argLine>
           </configuration>
-<!--          спросить про ошибку, попробовал бы -->
+
           <version>2.22.1</version>
         </plugin>
         <plugin>
